syntax = "proto3";

package schema;

option go_package = "./";

message RecommendRequest {
  string dialog_id = 1;
  string summary = 2;
}

message RecommendResponse {
  repeated string labels = 1;
  repeated float scores = 2;
}

service RecommendService {
  rpc Recommend(RecommendRequest) returns (RecommendResponse);
}
